fix heading h1 size on mobile

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -7,8 +7,14 @@
 /* Header */
 
 @include keyframes('reveal-header') {
-  0% { top: -4em; opacity: 0; }
-  100% { top: 0; opacity: 1; }
+  0% {
+    top: -4em;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 #header {
@@ -30,6 +36,14 @@
   width: 100%;
   z-index: _misc(z-index-base);
 
+  h1 {
+    font-size: 1.9rem;
+
+    @include breakpoint(large) {
+      font-size: 1rem;
+    }
+  }
+
   .logo {
     border: 0;
     display: inline-block;
@@ -39,10 +53,13 @@
     padding: 0.5rem 1.5rem;
 
     strong {
-      @include vendor('transition', (
-        'background-color #{_duration(transition)} ease-in-out',
-        'color #{_duration(transition)} ease-in-out'
-      ));
+      @include vendor(
+        'transition',
+        (
+          'background-color #{_duration(transition)} ease-in-out',
+          'color #{_duration(transition)} ease-in-out'
+        )
+      );
 
       background-color: _palette(fg-bold);
       color: _palette(bg);
@@ -60,7 +77,7 @@
 
     &:active {
       strong {
-        background-color: desaturate(darken(_palette(highlight),15),5);
+        background-color: desaturate(darken(_palette(highlight), 15), 5);
       }
     }
   }
@@ -93,7 +110,9 @@
 
         &::before,
         &::after {
-          background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(fg-bold)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+          background-image: svg-url(
+            '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(fg-bold)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>'
+          );
           background-position: center;
           background-repeat: no-repeat;
           background-size: 24px 32px;
@@ -108,9 +127,14 @@
         }
 
         &::after {
-          @include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
+          @include vendor(
+            'transition',
+            'opacity #{_duration(transition)} ease-in-out'
+          );
 
-          background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(highlight)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>');
+          background-image: svg-url(
+            '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" preserveAspectRatio="none"><style>line { stroke-width: 2px; stroke: #{_palette(highlight)}; }</style><line x1="0" y1="11" x2="24" y2="11" /><line x1="0" y1="21" x2="24" y2="21" /><line x1="0" y1="16" x2="24" y2="16" /></svg>'
+          );
           opacity: 0;
           z-index: 1;
         }
@@ -148,12 +172,48 @@
     // position: absolute;
     position: fixed;
 
-    &.style1 { .logo { strong { color: _palette(accent1); } } }
-    &.style2 { .logo { strong { color: _palette(accent2); } } }
-    &.style3 { .logo { strong { color: _palette(accent3); } } }
-    &.style4 { .logo { strong { color: _palette(accent4); } } }
-    &.style5 { .logo { strong { color: _palette(accent5); } } }
-    &.style6 { .logo { strong { color: _palette(accent6); } } }
+    &.style1 {
+      .logo {
+        strong {
+          color: _palette(accent1);
+        }
+      }
+    }
+    &.style2 {
+      .logo {
+        strong {
+          color: _palette(accent2);
+        }
+      }
+    }
+    &.style3 {
+      .logo {
+        strong {
+          color: _palette(accent3);
+        }
+      }
+    }
+    &.style4 {
+      .logo {
+        strong {
+          color: _palette(accent4);
+        }
+      }
+    }
+    &.style5 {
+      .logo {
+        strong {
+          color: _palette(accent5);
+        }
+      }
+    }
+    &.style6 {
+      .logo {
+        strong {
+          color: _palette(accent6);
+        }
+      }
+    }
   }
 
   .body.is-loading & {
